[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/GameOver.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Extrude.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://TileSets/MenuTiles/BlackBackground.jpg" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 2 )

[node name="GameOver" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BlackBackground" type="Sprite" parent="."]
position = Vector2( 505, 300 )
scale = Vector2( 1.14105, 1.89143 )
texture = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 246.0
margin_top = 189.0
margin_right = 777.0
margin_bottom = 411.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 531.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 531.0
margin_bottom = 161.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 125.0
margin_right = 405.0
margin_bottom = 57.0

[node name="Try_again" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 280.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 2 )
text = "Try Again?"
flat = true

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 165.0
margin_right = 531.0
margin_bottom = 222.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 131.0
margin_right = 400.0
margin_bottom = 57.0

[node name="Main_Menu" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 269.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 2 )
text = "Main Menu"
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true
